deleted unnecessary method, refactored